# starter-rs

./: Cargo.toml
src/: dispatcher.rs  lib.rs  main.rs  store.rs
src/modules/dummy/: mod.rs
