[package]
name = "starter-rs"
version = "1.0.0"
edition = "2024"

[dependencies]
anymap3 = "1.0.1"
crossfire = { version = "2.0.24", features = ["tokio"] }
derive_more = { version = "2.0.1", features = ["from"] }
enum_dispatch = "0.3.13"
fastrace = { version = "0.7.14", features = ["enable"] }
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive", "std"] }
structstruck = "0.5.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
